tests/sksl/errors/SwizzleConstantOutput.glsl
### Compilation failed:

error: 3: cannot assign to this expression
    test.xyz0 = float4(1);
    ^^^^^^^^^
1 error
